<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.60"
        android:orientation="vertical">

        <EditText
            android:id="@+id/campo_email_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/campo_password_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password" />

        <Button
            android:id="@+id/button_registrarme_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5DBFE1"
            android:text="@string/boton_registrarme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.40"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_photo"
            android:src="@drawable/infractucdos" />
    </LinearLayout>
</LinearLayout>