<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_dise"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaCapturaFotografia">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"

        android:orientation="vertical">
        <TextView android:id="@+id/txt_concejos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="28sp"

            android:text="@string/texto_campo_foto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.30"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/set_image_capture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_photo"
            app:srcCompat="@drawable/denunciavial"
             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.80"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_capture_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_captura_foto" />

        <Button
            android:id="@+id/button_reconocer_patente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5DBFE1"
            android:text="@string/texto_vacio" />
    </LinearLayout>




</LinearLayout>