<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.VistaOpciones">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_nombre_de_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/texto_denuncia_vial" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/description_photo"
            android:src="@drawable/denunciavial" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.80"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_realizar_denuncia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2471A3"
            android:text="@string/texto_iniciar_denuncia"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_ver_denuncias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4A7197"
            android:text="@string/texto_ver_denuncia"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_button_background_color_pressed"
            android:text="@string/boton_salir"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>