<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VistaLogin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen_de_infractuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_photo"
            app:srcCompat="@drawable/infractuctres" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/boton_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:text="@string/fb_login"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:orientation="vertical">



            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="555dp"
        android:layout_weight="0.60"
        android:orientation="vertical">

        <EditText
            android:id="@+id/campo_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/campo_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password" />

        <Button
            android:id="@+id/boton_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuar_con_email" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"
        android:orientation="vertical">

        <Button
            android:id="@+id/boton_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/no_tenes_una_cuenta" />
    </LinearLayout>

</LinearLayout>